--- a/src/Rendonan/MiniBundle/Resources/config/routing.yml
+++ b/src/Rendonan/MiniBundle/Resources/config/routing.yml
@@ -2,6 +2,10 @@ rendonan_mini_homepage:
     path:     /main
     defaults: { _controller: RendonanMiniBundle:Main:index }
 
+rendonan_mini_game:
+    path:     /game
+    defaults: { _controller: RendonanMiniBundle:Game:index }
+
 rendonan_mini_404:
     path:     /{url}
     defaults: { _controller: RendonanMiniBundle:PageNotFound:index }
