Added register page, note: have to add SQLite setup in order to store user accounts here.

--- a/src/Rendonan/MiniBundle/Resources/config/routing.yml
+++ b/src/Rendonan/MiniBundle/Resources/config/routing.yml
@@ -10,6 +10,10 @@ rendonan_mini_scores:
     path:     /highscore
     defaults: { _controller: RendonanMiniBundle:Highscore:index }
 
+rendonan_mini_registration:
+    path:     /register
+    defaults: { _controller: RendonanMiniBundle:Register:index }
+
 
 rendonan_mini_404:
     path:     /{url}
