Sloppy attempt to add user-login functionality using sessions. It works, but still very messy and requires refactoring and janitorial work once I get a more clear view upon how things are supposed to fall in place.

--- a/src/Rendonan/MiniBundle/Resources/config/routing.yml
+++ b/src/Rendonan/MiniBundle/Resources/config/routing.yml
@@ -18,6 +18,13 @@ rendonan_mini_thankyou:
     path:     /thankyou
     defaults: { _controller: RendonanMiniBundle:Register:thankyou }
 
+rendonan_mini_login:
+    path:     /login
+    defaults: { _controller: RendonanMiniBundle:Register:login }
+
+rendonan_mini_login_check:
+    pattern:  /login
+    defaults: { _controller: RendonanMiniBundle:Register:login }
 
 rendonan_mini_404:
     path:     /{url}
