Modified .gitignore to start tracking game-files. Again, set-up to ONLY commit personally-made changes (thus ignoring game-maker's own files)

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@
 
 !/web/css/*
 !/web/images/*
+
+!/GM_SOURCE/sourcecode/rendonan_release\.gmx/objects/*
+!/GM_SOURCE/sourcecode/rendonan_release\.gmx/rooms/*
+!/GM_SOURCE/sourcecode/rendonan_release\.gmx/scripts/*
+!/GM_SOURCE/sourcecode/rendonan_release\.gmx/sprites/*
+!/GM_SOURCE/sourcecode/rendonan_release\.gmx/sprites/images/*
