[GAME] Modified gitignore to accept fonts, and included one in the game. Still skeptical if it will work on a different pc as it does not actually seem to include the font other than the name the way it is installed on my pc locally. But still it is worth a try.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@
 !/GM_SOURCE/sourcecode/rendonan_release\.gmx/scripts/*
 !/GM_SOURCE/sourcecode/rendonan_release\.gmx/sprites/*
 !/GM_SOURCE/sourcecode/rendonan_release\.gmx/sprites/images/*
+!/GM_SOURCE/sourcecode/rendonan_release\.gmx/fonts/*
