Modified .gitignore to include game background files

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@
 !/GM_SOURCE/sourcecode/rendonan_release\.gmx/sprites/*
 !/GM_SOURCE/sourcecode/rendonan_release\.gmx/sprites/images/*
 !/GM_SOURCE/sourcecode/rendonan_release\.gmx/fonts/*
+!/GM_SOURCE/sourcecode/rendonan_release\.gmx/background/*
+!/GM_SOURCE/sourcecode/rendonan_release\.gmx/background/images/*
