Added url resolve when no page is specified. When ending on simple "/", forward to main page

--- a/src/Rendonan/MiniBundle/Resources/config/routing.yml
+++ b/src/Rendonan/MiniBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+rendonan_mini_welcome:
+    path:     /
+    defaults: { _controller: RendonanMiniBundle:Main:index }
+
 rendonan_mini_homepage:
     path:     /main
     defaults: { _controller: RendonanMiniBundle:Main:index }
