Forwarding users to main page when no specific page is specified.

--- a/src/Rendonan/MiniBundle/Resources/config/routing.yml
+++ b/src/Rendonan/MiniBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
 rendonan_mini_welcome:
     path:     /
-    defaults: { _controller: RendonanMiniBundle:Main:index }
+    defaults: { _controller: RendonanMiniBundle:Main:forward }
 
 rendonan_mini_homepage:
     path:     /main
