--- a/src/Rendonan/MiniBundle/Resources/config/routing.yml
+++ b/src/Rendonan/MiniBundle/Resources/config/routing.yml
@@ -42,6 +42,10 @@ rendonan_mini_logout:
     pattern:  /logout
     defaults: { _controller: RendonanMiniBundle:Register:logout }
 
+rendonan_mini_delete:
+    pattern:  /delete
+    defaults: { _controller: RendonanMiniBundle:Register:unregister }
+
 rendonan_mini_404:
     path:     /{url}
     defaults: { _controller: RendonanMiniBundle:PageNotFound:index }
