Janitorial work: Removed unused / redundant code and files from project. (included routing_dev.yml to repository since this was now also modified by removing a dependency on a removed class)

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 !/app/config/config.yml
 !/app/config/parameters.yml
 !/app/config/security.yml
+!/app/config/routing_dev.yml
 !/app/Resources/views/base.html.twig
 
 !/app/rendonan_minigame.db
