--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@
 !/GM_SOURCE/sourcecode/rendonan_release\.gmx/fonts/*
 !/GM_SOURCE/sourcecode/rendonan_release\.gmx/background/*
 !/GM_SOURCE/sourcecode/rendonan_release\.gmx/background/images/*
+!/GM_SOURCE/sourcecode/rendonan_release\.gmx/sound/*
+!/GM_SOURCE/sourcecode/rendonan_release\.gmx/sound/audio/*
